<resources>
    <string name="app_name">Sadarsiaga</string>
    <string name="title_home">Home</string>
    <string name="title_bantuan">Bantuan</string>
    <string name="title_berita">Berita</string>
    <string name="title_profile">Profile</string>
    <string name="login">LOGIN</string>
    <string name="lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="lupa">Lupa Kata Sandi</string>

    <string name="masukan_email">Masukan alamat email</string>

    <string name="yang_terdaftar">yang telah terdaftar</string>

    <string name="alamat_email">Alamat Email</string>

    <string name="lanjutkan">Lanjutkan</string>

    <string name="kata_baru">Kata Sandi Baru</string>

    <string name="cek_email_anda_dan">Cek Email anda dan</string>

    <string name="masukan_kode_verifikasi">masukan kode verifikasi</string>

    <string name="untuk_setel_ulang_kata_sandi">untuk setel ulang kata sandi</string>

    <string name="masukan_sandi_baru">masukan sandi baru</string>

    <string name="untuk_menggantikan_sandi">untuk menggantikan sandi</string>

    <string name="yang_lama">yang lama</string>

    <string name="kata_sandi">Kata Sandi</string>
    <string name="detail">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>

</resources>
